fem-managesite/style.css
/* ... */
  @media (min-width: 47em){
    .hero-image::before{
      width: 45%;
    }
  }

  /* Sales points */
  .sales-points{
    position: relative;
  }

  .sales-points::before{
    content:'';
    position: absolute;
    z-index: -1;
    left: 70%;
    top: -50vh;
    width: 60%;
    max-height: 70vh;
    aspect-ratio: 1 / 1.2;
    background-image: url(images/bg-tablet-pattern.svg);
    background-position: bottom left;
    background-repeat: no-repeat;
    background-size: contain;
  }
@media(min-width: 47em){
  .sales-points::before{
    left: -20vw;
    top: 45vh;
    width: 100%;
    max-height: 90vh;
    aspect-ratio: 1 / 1.2;
    background-position: bottom left;
  }
}
/* Utility Classes */

.visually-hidden{
  position: absolute;
	position: absolute !important;
	width: 1px !important;
	height: 1px !important;
	padding: 0 !important;
	margin: -1px !important;
	overflow: hidden !important;
	clip: rect(0,0,0,0) !important;
	white-space: nowrap !important;
	border: 0 !important;
}

.container{
  --max-width: 1110px ;
  --container-padding: 1rem;

  width: min(var(--max-width), 100% - (var(--container-padding) * 2));
  margin-inline: auto;
}

.even-columns{
  display: grid;
  gap: 1rem;
}

@media(min-width: 47em){
  .even-columns{
    grid-auto-flow: column;
    grid-auto-columns: 1fr;
  }
}

.vertical-align-center{
  align-items: center;
}

.justify-self-end{
  justify-self: end;
}

@media(min-width: 47em){
  .justify-self-end-md{
    justify-self: end;
  }
}


:where(.flow > * + *) {
  margin-top: var(--flow-spacer, 3em);
}

.text-center{
  text-align: center;
}

.text-center p{
  margin-inline: auto;
}

@media(max-width: 47em){
  .text-center-sm-only{
    text-align: center;
  }
  .text-center-sm-only p{
    margin-inline: auto;  
  } 
}

.text-primary-400{
  color: var(--clr-primary-400);
}
.text-accent-400{
  color: var(--clr-accent-400);
}
.text-accent-300{
  color: var(--clr-accent-300);
}
.text-neutral-900{
  color: var(--clr-neutral-900);
}
.text-neutral-100{
  color: var(--clr-neutral-100);
}

.bg-primary-400{
  background-color: var(--clr-primary-400);
}
.bg-accent-400{
  background-color: var(--clr-accent-400);
}
.bg-accent-300{
  background-color: var(--clr-accent-300);
}
.bg-neutral-900{
  background-color: var(--clr-neutral-900);
}
.bg-neutral-100{
  background-color: var(--clr-neutral-100);
}

.fw-bold{
  font-weight: var(--fw-bold);
}
.fw-semi-bold{
  font-weight: var(--fw-semi-bold);
}
.fw-regular{
  font-weight: var(--fw-regular);
}

.fs-primary-heading {
  font-size: var(--fs-primary-heading);
  line-height: 1.1;
}
.fs-secondary-heading {
  font-size: var(--fs-secondary-heading);
  line-height: 1.1;
}

.fs-300{
  font-size: var(--fs-300);
}
.fs-400{
  font-size: var(--fs-400);
}
.fs-500{
  font-size: var(--fs-500);
}
.fs-600{
  font-size: var(--fs-600);
}

.padding-block-900{
  padding-block: var(--size-900);
}
.padding-block-500{
  padding-block: var(--size-500);
}
.padding-block-700{
  padding-block: var(--size-700);
}

.margin-bottom-700{
  margin-block-end: var(--size-700);
}
.margin-top-900{
  margin-block-start: var(--size-900);
}
.mx-auto{
  margin-inline: auto;
}

.display-small-none{
  display: none;
}
@media(min-width: 47em){
  .display-md-inline-flex{
    display: inline-flex;
  }
}

